añadimos vinculo fase 2 a fase 1
añadimos el vinculo de la fase 2 a la fase 1

--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
     Skype: danielhuertas2000@hotmail.com <br>
     Celular: 3005063660
    </p>
+
+   <a href="fase2/design.html">Fase 2</a>
 </body>
 </html>
