--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     Celular: 3005063660
    </p>
 
-   <a href="fase2/design.html">Fase 2</a>
+   <a href="Fase2/design.html">Fase 2</a>
 </body>
 </html>
