--- a/Fase2/design.html
+++ b/Fase2/design.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fase2</title>
+    
 </head>
 <body>
     <header>
@@ -13,31 +14,32 @@
         </h1>
     </header>
     <hr>
-    <nav>
+    
+    <nav class="navegacion">
         <ul>
             <li>Inicio</li>
             <li>Temas
-                <ul>
+                <ul class="submenu">
                     <li><a href="#">Tema 1</a></li>
                     <li><a href="">Tema 2</a></li>
                 </ul>
             </li>
 
             <li>Recursos digitales
-                <ul>
+                <ul class="submenu">
                     <li><a href="">Recursos 1</a></li>
                     <li><a href="">Recursos 2</a></li>
                 </ul>
             </li>
 
             <li>Aprendizaje</li>
-            <ul>
+            <ul class="submenu">
                      <li><a href="">Actividad 1</a></li>
                      <li><a href="">Actividad 2</a></li>
             </ul>
 
             <li>Acerca de</li> 
-            <ul>
+            <ul class="submenu">
                     <li><a href="">Autor</a></li>
             </ul>
         </ul>
