--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     Celular: 3005063660
    </p>
 
-   <a href="Fase2/design.html">Fase 2</a>
+   <a href="Fase2/design.html">Fase 2</a> <br>
+   <a href="Fase3/index.html">Fase 3</a>
 </body>
 </html>
